my first commit, page symptoms-list and form, angularfire and firebase conection

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -20,6 +20,7 @@ ion-menu.md ion-note {
 ion-menu.md ion-list-header,
 ion-menu.md ion-note {
   padding-left: 10px;
+  padding-bottom: 15px;
 }
 
 ion-menu.md ion-list#inbox-list {
@@ -101,6 +102,8 @@ ion-menu.ios ion-list-header,
 ion-menu.ios ion-note {
   padding-left: 16px;
   padding-right: 16px;
+  padding-bottom: 16px;
+
 }
 
 ion-menu.ios ion-note {
