symptoms form with onSubmit, service addSymptoms method e class symptoms

--- a/src/app/symptoms/symptoms-list/symptoms-list.page.html
+++ b/src/app/symptoms/symptoms-list/symptoms-list.page.html
@@ -39,7 +39,7 @@
     </ion-item>
   </ion-list>
   <ion-fab vertical="bottom" horizontal="end" slot="fixed">
-    <ion-fab-button>
+    <ion-fab-button [routerLink]="['/symptoms-form']">
       <ion-icon name="add-circle-outline">Adicionar</ion-icon>
     </ion-fab-button>
   </ion-fab>
