--- a/src/app/symptoms/symptoms-list/symptoms-list.page.html
+++ b/src/app/symptoms/symptoms-list/symptoms-list.page.html
@@ -1,5 +1,8 @@
 <ion-header>
   <ion-toolbar color="primary">
+    <ion-buttons slot="start">
+      <ion-menu-button></ion-menu-button>
+    </ion-buttons>
     <ion-title>Lista dos Sintomas</ion-title>
   </ion-toolbar>
 </ion-header>
@@ -23,7 +26,7 @@
             </ion-button>
           </ion-col>
           <ion-col> <!--4-->
-            <ion-button color="danger">
+            <ion-button color="danger" (click)="removeSymptom(symptom.id)">
               <ion-icon name="trash"></ion-icon>
             </ion-button>
           </ion-col>
