--- a/src/app/symptoms/symptoms-list/symptoms-list.page.html
+++ b/src/app/symptoms/symptoms-list/symptoms-list.page.html
@@ -21,7 +21,7 @@
             <span>{{ symptom.name}}</span>
           </ion-col>
           <ion-col> <!--3-->
-            <ion-button color="warning">
+            <ion-button color="warning" [routerLink]="['/symptoms-form/edit', symptom.id]">
               <ion-icon name="create-outline"></ion-icon>
             </ion-button>
           </ion-col>
@@ -33,7 +33,7 @@
         </ion-row>
         <ion-row>
           <ion-col size="3"> <!--1-->
-            <span [innerHTML]="symptom.description"></span>
+            <!-- <span [innerHTML]="symptom.description"></span> -->
           </ion-col>
         </ion-row>
 
@@ -42,7 +42,7 @@
     </ion-item>
   </ion-list>
   <ion-fab vertical="bottom" horizontal="end" slot="fixed">
-    <ion-fab-button [routerLink]="['/symptoms-form']">
+    <ion-fab-button [routerLink]="['/symptoms-form/new']">
       <ion-icon name="add-circle-outline">Adicionar</ion-icon>
     </ion-fab-button>
   </ion-fab>
